<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Auto Generated (Don't remove) -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- General -->
    <string name="general_btn_submit">Submit</string>
    <string name="general_btn_close">Close</string>
    
    <!-- Splash Screen -->
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="loading_tv">Loading</string>
    <string name="splashImageContentDescription">TDG Logo Image for splash screen</string>

    <!-- Main Menu -->
    <string name="app_name">Traffic Counts</string>
    <string name="nonIntersectionButton">Non-Intersection Count</string>
    <string name="intersectionButton">Intersection Count</string>
    <string name="helpButton">Help</string>
    <string name="aboutButton">About</string>

    <!-- Count Set-up -->
    <string name="title_activity_count_setup">CountSetup</string>
    <string name="surveyor_name">Surveyor Name</string>
    <string name="date">Date</string>
    <string name="location_setup">Location</string>
    <string name="hint_street_name_and_num">12 Example Street</string>
    <string name="hint_suburb">Suburb</string>
    <string name="hint_city">City</string>
    <string name="hint_postcode">Post Code</string>
    <string name="hint_area_description">General description of area. e.g: Near Bunnings Hamilton</string>
    <string name="hint_date">12/12/2012</string>
    <string name="hint_full_name">John Smith</string>
    <string name="intersection_type">Intersection Type</string>
    <string name="hint_intersection_type">Select an Intersection</string>
    <string name="btnLbl_selectIntersection_type">Select</string>
    <string name="intersection_picture">Intersection Picture</string>
    <string name="btnLbl_add_picture">Add</string>
    <string name="btnLbl_remove_picture">Remove</string>
    <string name="comments">Comments</string>
    <string name="hint_comments">Any relevant comments about your count progress and/or experiences</string>
    <string name="setDateBtn">Set Date</string>
    <string name="title_activity_intersection_type">IntersectionType</string>

    <!-- About -->
    <string name="title_activity_About">About</string>
    <string name="header_aboutTDG">About Traffic Design Group (TDG)</string>
    <string name="title_about_app">About the Application</string>
    <string name="header_about_develpmentTeam">About Development Team</string>

    <!-- Help -->
    <string name="title_activity_help">Help</string>

    <!-- Counting Screen -->
    <string name="title_activity_counting_screen">CountingScreen</string>
    <string name="cs_txt_total_counter">Total Count: </string>
    <string name="cs_txt_currently_selected_count_txt">Count Object: </string>
    <string name="cs_btn_undo">Undo</string>
    <string name="cs_txt_currently_selected">Currently Selected: </string>
    <string name="cs_txt_currently_selected_object">Count Object</string>
    <string name="cs_btn_vehicles">Vehicles</string>
    <string name="cs_btn_pedestrian">Pedestrians</string>
    <string name="cs_txt_sessiontimer">Session Timer: </string>
    <string name="cs_txt_timer">00:00</string>
    <string name="cs_btn_comment">Comments</string>
    <string name="cs_btn_direction_nw">North-West</string>
    <string name="cs_btn_direction_n">North</string>
    <string name="cs_btn_direction_ne">North-East</string>
    <string name="cs_btn_direction_w">West</string>
    <string name="cs_btn_direction_e">East</string>
    <string name="cs_btn_direction_sw">South-West</string>
    <string name="cs_btn_direction_s">South</string>
    <string name="cs_btn_direction_se">South-East</string>
    <string name="cs_btn_intersection_name">Add/Change Intersection Name</string>
    <string name="cs_btn_changeDefault">Change Default To</string>
    <string name="cs_btn_changeTimer">Change Timer</string>
    
    <!-- Counting Screen Dialog -->
    <string name="title_activity_counting_screen__dialog">CountingScreen_Dialog</string>
    <string name="csd_btn_truck">Truck</string>
    <string name="csd_btn_bus">Bus</string>
    <string name="csd_btn_car">Car</string>
    <string name="csd_btn_motorbike">Motor Bike</string>
    <string name="csd_btn_pedestrian">Pedestrian (No Aid)</string>
    <string name="csd_btn_crutches_1">Walking Stick / Crutch (1)</string>
    <string name="csd_btn_crutches_2">Walking Sticks / Crutches (2)</string>
    <string name="csd_btn_cane">Cane (Poor Eyesight)</string>
    <string name="csd_btn_dog">Guide Dog</string>
    <string name="csd_btn_manual_scooter">Manual Scooter</string>
    <string name="csd_btn_mobility_scooter">Mobility Scooter</string>
    <string name="csd_btn_wheelchair_powered">Wheelchair (Powered)</string>
    <string name="csd_btn_wheelchair_assisted">Wheelchair (Assisted)</string>
    <string name="csd_btn_wheelchair_manual">Wheelchair (Manual)</string>
    <string name="csd_btn_pushchair">Push Chair / Buggy</string>
    <string name="csd_btn_skateboard">Skateboard</string>
    
    <!-- Count Setup Intersection Dialog-->
    <string name="csi_txt_3way">3 Way</string>
    <string name="csi_txt_4way">4 Way</string>
    <string name="csi_txt_5way">5 Way</string>
    <string name="csi_txt_6way">6 Way</string>
    <string name="tv_commentTextViewable_CS">Your comments will appear here.</string>
    <string name="weatherComment_tv">Weather</string>
    <string name="weatherComment_ET_hint">Enter the current weather condition</string>
    
    <!-- Count Setup Intersection Setup Dialog-->
    <string name="csis_instruction">Please click on the buttons to enable the approach/exit at an intersection</string>
    <string name="csis_nw">North-West</string>
    <string name="csis_n">North</string>
    <string name="csis_ne">North-East</string>
    <string name="csis_w">West</string>
    <string name="csis_e">East</string>
    <string name="csis_sw">South-West</string>
    <string name="csis_s">South</string>
    <string name="csis_se">South-East</string>
    <string name="csis_txt_approachleft">Approaches Left: 0</string>
    
    <!-- Counting Screen Intersection Name Changer -->
    <string name="csn_txt_instructions">Please insert the name of the street below</string>
    <string name="csn_txt_nw">North-West</string>
    <string name="csn_txt_n">North</string>
    <string name="csn_txt_ne">North-East</string>
    <string name="csn_txt_w">West</string>
    <string name="csn_txt_e">East</string>
    <string name="csn_txt_sw">South-West</string>
    <string name="csn_txt_s">South</string>
    <string name="csn_txt_se">South-East</string>
    
    <!-- Counting Screen Timer -->
    <string name="cs_timer_instructions">Please select the counting time.</string>
    <string name="cs_timer_custom_instructions">Or input your own time.</string>
    <string name="cs_timer_btn_5">5 Minutes</string>
    <string name="cs_timer_btn_10">10 Minutes</string>
    <string name="cs_timer_btn_15">15 Minutes</string>
                    
    <!-- Help Screen -->
    <string name="help_txt_title_countsetup">Count Set-up</string>
    <string name="help_txt_title_intersection">Count Set-up - Intersection Picker</string>
    <string name="help_txt_title_countingscreen">Counting Screen</string>
    <string name="help_txt_title_namepicker">Counting Screen - Changing the name of the directions</string>
    <string name="help_txt_title_compass">Calibrating the Compass</string>
    <string name="help_txt_countsetup">This is used to set up the information of the surveyor and the location of where they need to conduct their counting sessions.</string>
    <string name="help_txt_countingscreen">Click on a direction to select that as the approaching side. Then click on another direction to set that as the exiting side. If you make a mistake, you can click the button again to deselect it.</string>
    <string name="help_txt_intersection">The amount of approaches required to continue is located in the center of all the directional buttons. If you make a mistake, you can click the button again to deselect it.</string>
    <string name="help_txt_namepicker">By entering a name into the box under the direction. It will change the name on the button at the counting screen. If left blank. It will default back to a direction (North, South, etc.)</string>
    <string name="help_txt_compass">If the red point on the compass does not point north. Rotate the Android device in an \'8\' shape to recalibrate the compass.</string>
    <string name="help_btn_back">Back</string>
    
</resources>
