<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@android:color/white"
        android:layout_weight="1"
        android:gravity="center" >

        <Button
            android:id="@+id/csd_btn_pedestrian"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/csd_btn_pedestrian" />

        <Button
            android:id="@+id/csd_btn_crutches_1"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/csd_btn_crutches_1" />

        <Button
            android:id="@+id/csd_btn_crutches_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:text="@string/csd_btn_crutches_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/csd_btn_cane"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/csd_btn_cane" />

        <Button
            android:id="@+id/csd_btn_dog"
            android:layout_width="0dp"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/csd_btn_dog" />

        <Button
            android:id="@+id/csd_btn_mobility_scooter"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/csd_btn_mobility_scooter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <Button
            android:id="@+id/csd_btn_wheelchair_assisted"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/csd_btn_wheelchair_assisted" />

        <Button
            android:id="@+id/csd_btn_wheelchair_manual"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/csd_btn_wheelchair_manual" />

        <Button
            android:id="@+id/csd_btn_wheelchair_powered"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/csd_btn_wheelchair_powered" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <Button
            android:id="@+id/csd_btn_pushchair"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/csd_btn_pushchair" />

        <Button
            android:id="@+id/csd_btn_skateboard"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/csd_btn_skateboard" />

        <Button
            android:id="@+id/csd_btn_manual_scooter"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/csd_btn_manual_scooter" />
    </LinearLayout>

    <Button
        android:id="@+id/csd_btn_close_pedestrian"
        android:layout_width="wrap_content"
        android:background="@drawable/small_grey"
        android:textColor="@android:color/white"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/general_btn_close" />

</LinearLayout>