<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.TDG.trafficcountingapp.Help" xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/help_txt_title_countsetup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_txt_title_countsetup"
                    android:layout_gravity="center_horizontal"
                    android:textSize="70sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/help_img_countsetup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/help1" />

                    <TextView
                        android:id="@+id/help_txt_countsetup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_txt_countsetup"
                        android:layout_gravity="center_vertical"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

                <TextView
                    android:id="@+id/help_txt_title_intersection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_txt_title_intersection"
                    android:layout_gravity="center_horizontal"
                    android:textSize="80sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/help_img_intersection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/help2" />

                    <TextView
                        android:id="@+id/help_txt_intersection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_txt_intersection"
                        android:layout_gravity="center_vertical"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

                <TextView
                    android:id="@+id/help_txt_title_countingscreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_txt_title_countingscreen"
                    android:layout_gravity="center_horizontal"
                    android:textSize="80sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/help_img_countingscreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/help3" />

                    <TextView
                        android:id="@+id/help_txt_countingscreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_txt_countingscreen"
                        android:layout_gravity="center_vertical"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

                <TextView
                    android:id="@+id/help_txt_title_namepicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_txt_title_namepicker"
                    android:layout_gravity="center_horizontal"
                    android:textSize="80sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/help_img_namepicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/help4" />

                    <TextView
                        android:id="@+id/help_txt_namepicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_txt_namepicker"
                        android:layout_gravity="center_vertical"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

                <TextView
                    android:id="@+id/help_txt_title_compass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_txt_title_compass"
                    android:layout_gravity="center_horizontal"
                    android:textSize="80sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/help_img_compass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/help8" />

                    <TextView
                        android:id="@+id/help_txt_compass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_txt_compass"
                        android:layout_gravity="center_vertical"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/help_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/help_btn_back" 
            android:onClick="onClickBack"/>

    </LinearLayout>

</RelativeLayout>
